purchaseLog update